fixed position of button and truncated desc in card in notification page

--- a/src/Modules/Patent/components/Applicant/ApplicationDraft.css
+++ b/src/Modules/Patent/components/Applicant/ApplicationDraft.css
@@ -20,7 +20,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 200px;;
+  min-height : 200px;;
 }
 
 /* Grid container for cards */
